--- a/server/src/MergeBot/appsettings.json
+++ b/server/src/MergeBot/appsettings.json
@@ -2,7 +2,7 @@
     "PublisherId": "alex-h",
     "ExtensionId": "merge-a-bot",
     "JwtSigningKey": ">LnE>7NhL6&.#<FbQAGTc_>?4dYJgLnMY;5=<eT9WC~A}D~f>j~MS$~qc!R=p;-/",
-    "JwtIssuer": "automerge.io",
+    "JwtIssuer": "merge-a-bot",
     "Logging": {
         "LogLevel": {
             "Default": "Debug",
