Added Serilog, included / route

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,3 +29,4 @@ jobs:
       with: 
         app-name: merge-a-bot
         publish-profile: ${{ secrets.AZ_WEBAPP_PUBLISH_PROFILE }}
+        package: dist
