--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Get the version
+      if: startsWith(github.ref, 'refs/tags/')
+      id: get_version
+      run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v1
       with:
@@ -25,6 +29,6 @@ jobs:
       with:
         push: true # Will only build if this is not here
         tags: |
-          ghcr.io/${{ github.repository }}:${{ github.ref }}
+          ghcr.io/${{ github.repository }}:${{ steps.get_version.outputs.VERSION }}
           ghcr.io/${{ github.repository }}:latest
     
