--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,10 +13,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Get the version
-      if: startsWith(github.ref, 'refs/tags/')
+    - name: Get the tags version
       id: get_version
-      run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
+      run: echo ::set-output name=VERSION::${GITHUB_REF##*/}
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v1
       with:
