--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,6 +32,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true # Will only build if this is not here
+        file: server/src/MergeBot/Dockerfile
         tags: |
           ghcr.io/${{  steps.get_repo.outputs.lowercase }}:${{ steps.get_version.outputs.VERSION }}
           ghcr.io/${{ steps.get_repo.outputs.lowercase }}:latest
